--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@mui/icons-material": "^7.1.1",
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.3",
     "astro-navbar": "^2.3.9",
