--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
     "wrangler": "^4.20.5"
-  }
+  },
+  "scripts": {
+  "dev": "astro dev",
+  "build": "astro build",
+  "preview": "astro preview",
+  "astro": "astro",
+  "test": "echo \"No tests specified\" && exit 0"
+}
 }
