--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/db": "^0.15.0",
     "@mui/icons-material": "^7.1.1",
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.3",
